update pact config